--- a/package.json
+++ b/package.json
@@ -92,8 +92,19 @@
     }
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
     "@types/jest": "^28.1.4",
+    "dotenv": "^16.0.1",
+    "hardhat": "^2.10.0",
+    "hardhat-gas-reporter": "^1.0.8",
     "jest": "^28.1.2",
-    "ts-jest": "^28.0.5"
+    "solidity-coverage": "^0.7.21",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.2",
+    "typechain": "^8.1.0"
   }
 }
