--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "uniswap-explorer",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "test:coverage": "react-scripts test --coverage --runInBand --watchAll=false",
+    "compile-contract-types": "typechain --target ethers-v5 --out-dir './contracts/types' './contracts/*.json'",
+    "eject": "react-scripts eject",
+    "postinstall": "npm run compile-contract-types"
+  },
   "dependencies": {
     "@ethersproject/providers": "^5.6.8",
     "@metamask/detect-provider": "^1.2.0",
@@ -27,13 +36,21 @@
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage --runInBand --watchAll=false",
-    "compile-contract-types": "typechain --target ethers-v5 --out-dir './contracts/types' './contracts/*.json'",
-    "eject": "react-scripts eject"
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.1.0",
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "@types/jest": "^28.1.4",
+    "dotenv": "^16.0.1",
+    "hardhat": "^2.10.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "jest": "^28.1.2",
+    "solidity-coverage": "^0.7.21",
+    "ts-jest": "^28.0.5",
+    "ts-node": "^10.8.2",
+    "typechain": "^8.1.0"
   },
   "eslintConfig": {
     "extends": [
@@ -92,21 +109,5 @@
       "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy",
       "src/(.*)$": "<rootDir>/src/$1"
     }
-  },
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.1.0",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/hardhat": "^6.1.2",
-    "@types/jest": "^28.1.4",
-    "dotenv": "^16.0.1",
-    "hardhat": "^2.10.0",
-    "hardhat-gas-reporter": "^1.0.8",
-    "jest": "^28.1.2",
-    "solidity-coverage": "^0.7.21",
-    "ts-jest": "^28.0.5",
-    "ts-node": "^10.8.2",
-    "typechain": "^8.1.0"
   }
 }
