--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:coverage": "react-scripts test --coverage --runInBand --watchAll=false",
+    "compile-contract-types": "typechain --target ethers-v5 --out-dir './contracts/types' './contracts/*.json'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
