--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-number-format": "^4.9.3",
     "react-scripts": "5.0.1",
+    "swr": "^1.3.0",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
