--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
     "@types/jest": "^28.1.4",
+    "@uniswap/v3-core": "^1.0.1",
+    "@uniswap/v3-periphery": "^1.4.1",
     "dotenv": "^16.0.1",
     "hardhat": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.8",
